# androidNdk

./: readme.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/androidndk/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/camera/: android_main.cpp  camera_engine.cpp  camera_engine.h  camera_listeners.cpp  camera_manager.cpp  camera_manager.h
app/src/main/cpp/convert/: convertUtils.cpp  convertUtils.h  convert_lib.cpp
app/src/main/cpp/utils/: camera_utils.cpp  camera_utils.h  native_debug.h
app/src/main/java/com/example/androidndk/: CameraActivity.kt  MainActivity.kt  TensorFlowActivity.kt
app/src/main/java/com/example/androidndk/tensorFlow/: CameraFragment.kt  ObjectDetect.kt  TensorFlowActivity.kt
app/src/main/res/layout/: activity_camera.xml  activity_main.xml  activity_tensor_flow.xml  fragment_camera.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/com/example/androidndk/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
